--- a/2023_fall/lec03/lec03_notebook.ipynb
+++ b/2023_fall/lec03/lec03_notebook.ipynb
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "afd1f489",
    "metadata": {},
    "outputs": [
@@ -1159,135 +1159,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EFEFEF\n",
-      "======================================================================\n",
-      "ERROR: test_cancellation_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 13, in test_cancellation_output\n",
-      "    self.assertEqual(len(a), 3, \"cancellation returned a list of the wrong length\")\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_copy_all_but_skip_word_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 24, in test_copy_all_but_skip_word_output\n",
-      "    self.assertEqual(len(a), 7, \"copy_all_but_skip_word returned a list of the wrong length\")\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_my_average_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 36, in test_my_average_output\n",
-      "    self.assertAlmostEqual(a, 0.675, places=2, msg=\"my_average returned an incorrect average\")\n",
-      "  File \"/Users/jhasegaw/anaconda3/lib/python3.10/unittest/case.py\", line 876, in assertAlmostEqual\n",
-      "    diff = abs(first - second)\n",
-      "TypeError: unsupported operand type(s) for -: 'NoneType' and 'float'\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_cancellation_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 9, in test_cancellation_type\n",
-      "    self.assertIs(type(a), type([]), \"cancellation([]) should return a %s but it returns a %s\"%(type([]),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'list'> : cancellation([]) should return a <class 'list'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_copy_all_but_skip_word_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 20, in test_copy_all_but_skip_word_type\n",
-      "    self.assertIs(type(a), type([]), \"copy_all_but_skip_word([]) should return a %s but it returns a %s\"%(type([]),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'list'> : copy_all_but_skip_word([]) should return a <class 'list'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_my_average_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 32, in test_my_average_type\n",
-      "    self.assertIs(type(a), type(0.14), \"my_average([0.14]) should return a %s but it returns a %s\"%(type(0.14),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'float'> : my_average([0.14]) should return a <class 'float'> but it returns a <class 'NoneType'>\n",
-      "\n",
+      "......\n",
       "----------------------------------------------------------------------\n",
       "Ran 6 tests in 0.007s\n",
       "\n",
-      "FAILED (failures=3, errors=3)\n",
-      "EFEFEF\n",
-      "======================================================================\n",
-      "ERROR: test_cancellation_output (grade.Test)\n",
+      "OK\n",
+      "......\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 13, in test_cancellation_output\n",
-      "    self.assertEqual(len(a), 3, \"cancellation returned a list of the wrong length\")\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
+      "Ran 6 tests in 0.010s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_copy_all_but_skip_word_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 24, in test_copy_all_but_skip_word_output\n",
-      "    self.assertEqual(len(a), 7, \"copy_all_but_skip_word returned a list of the wrong length\")\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_my_average_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 36, in test_my_average_output\n",
-      "    self.assertAlmostEqual(a, 0.675, places=2, msg=\"my_average returned an incorrect average\")\n",
-      "  File \"/Users/jhasegaw/anaconda3/lib/python3.10/unittest/case.py\", line 876, in assertAlmostEqual\n",
-      "    diff = abs(first - second)\n",
-      "TypeError: unsupported operand type(s) for -: 'NoneType' and 'float'\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_cancellation_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 9, in test_cancellation_type\n",
-      "    self.assertIs(type(a), type([]), \"cancellation([]) should return a %s but it returns a %s\"%(type([]),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'list'> : cancellation([]) should return a <class 'list'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_copy_all_but_skip_word_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 20, in test_copy_all_but_skip_word_type\n",
-      "    self.assertIs(type(a), type([]), \"copy_all_but_skip_word([]) should return a %s but it returns a %s\"%(type([]),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'list'> : copy_all_but_skip_word([]) should return a <class 'list'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_my_average_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py\", line 32, in test_my_average_type\n",
-      "    self.assertIs(type(a), type(0.14), \"my_average([0.14]) should return a %s but it returns a %s\"%(type(0.14),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'float'> : my_average([0.14]) should return a <class 'float'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.006s\n",
-      "\n",
-      "FAILED (failures=3, errors=3)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 6 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 6 tests run\n",
-      "Score: 0%\n"
+      "6 successes out of 6 tests run\n",
+      "Score: 100%\n",
+      "6 successes out of 6 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec03/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\wisel\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec03\\\\grade.py'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
