--- a/2023_fall/lec04/lec04_notebook.ipynb
+++ b/2023_fall/lec04/lec04_notebook.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "f92915b6",
    "metadata": {},
    "outputs": [
@@ -540,67 +540,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EF\n",
-      "======================================================================\n",
-      "ERROR: test_list_to_dict_output (grade.Test)\n",
+      "..\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 12, in test_list_to_dict_output\n",
-      "    self.assertEqual(len(a), 3, \"list_to_dict, given a list of length 3, returns a dictionary with %d entries: %s\"%(len(a), str(a)))\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
+      "Ran 2 tests in 0.004s\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_list_to_dict_type (grade.Test)\n",
+      "OK\n",
+      "..\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 8, in test_list_to_dict_type\n",
-      "    self.assertIs(type(a), type({}), \"list_to_dict([]) should return a %s but it returns a %s\"%(type({}),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'dict'> : list_to_dict([]) should return a <class 'dict'> but it returns a <class 'NoneType'>\n",
+      "Ran 2 tests in 0.003s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
-      "\n",
-      "FAILED (failures=1, errors=1)\n",
-      "EF\n",
-      "======================================================================\n",
-      "ERROR: test_list_to_dict_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 12, in test_list_to_dict_output\n",
-      "    self.assertEqual(len(a), 3, \"list_to_dict, given a list of length 3, returns a dictionary with %d entries: %s\"%(len(a), str(a)))\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_list_to_dict_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 8, in test_list_to_dict_type\n",
-      "    self.assertIs(type(a), type({}), \"list_to_dict([]) should return a %s but it returns a %s\"%(type({}),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'dict'> : list_to_dict([]) should return a <class 'dict'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
-      "\n",
-      "FAILED (failures=1, errors=1)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 2 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 2 tests run\n",
-      "Score: 0%\n"
+      "2 successes out of 2 tests run\n",
+      "Score: 100%\n",
+      "2 successes out of 2 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\wisel\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec04\\\\grade.py'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
