--- a/2023_fall/lec05/lec05_notebook.ipynb
+++ b/2023_fall/lec05/lec05_notebook.ipynb
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "c1361dec",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "1d13dc5f",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c =  0\n"
+      "c =  2.0\n"
      ]
     }
    ],
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "6ce3a132",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "dbd444dd",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,11 @@
      "output_type": "stream",
      "text": [
       "I = \n",
-      " 0\n"
+      " [[1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 1.]]\n"
      ]
     }
    ],
@@ -899,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "a8456bf1",
    "metadata": {},
    "outputs": [
@@ -998,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "9ab257c6",
    "metadata": {},
    "outputs": [
@@ -1006,87 +1010,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_center_of_gravity (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py\", line 8, in test_center_of_gravity\n",
-      "    self.assertAlmostEqual(a,2.0,'''Center of gravity of [1,2,3,2,1] should be 2.0''')\n",
-      "  File \"/Users/jhasegaw/anaconda3/lib/python3.10/unittest/case.py\", line 890, in assertAlmostEqual\n",
-      "    if round(diff, places) == 0:\n",
-      "TypeError: 'str' object cannot be interpreted as an integer\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_matched_identity (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py\", line 12, in test_matched_identity\n",
-      "    self.assertEqual(len(I), 5, '''I should have 5 rows if input is [1,2,3,2,1]''')\n",
-      "TypeError: object of type 'int' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_sine_and_cosine (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py\", line 24, in test_sine_and_cosine\n",
-      "    self.assertEqual(len(t), 20, '''First vector returned by sine_and_cosine should have length 20''')\n",
-      "TypeError: object of type 'int' has no len()\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.004s\n",
-      "\n",
-      "FAILED (errors=3)\n",
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_center_of_gravity (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py\", line 8, in test_center_of_gravity\n",
-      "    self.assertAlmostEqual(a,2.0,'''Center of gravity of [1,2,3,2,1] should be 2.0''')\n",
-      "  File \"/Users/jhasegaw/anaconda3/lib/python3.10/unittest/case.py\", line 890, in assertAlmostEqual\n",
-      "    if round(diff, places) == 0:\n",
-      "TypeError: 'str' object cannot be interpreted as an integer\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_matched_identity (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py\", line 12, in test_matched_identity\n",
-      "    self.assertEqual(len(I), 5, '''I should have 5 rows if input is [1,2,3,2,1]''')\n",
-      "TypeError: object of type 'int' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_sine_and_cosine (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py\", line 24, in test_sine_and_cosine\n",
-      "    self.assertEqual(len(t), 20, '''First vector returned by sine_and_cosine should have length 20''')\n",
-      "TypeError: object of type 'int' has no len()\n",
-      "\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
       "Ran 3 tests in 0.003s\n",
       "\n",
-      "FAILED (errors=3)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n"
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec05/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\wisel\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec05\\\\grade.py'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
