--- a/2023_fall/lec10/lec10_notebook.ipynb
+++ b/2023_fall/lec10/lec10_notebook.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "b8c8138f",
    "metadata": {},
    "outputs": [
@@ -614,19 +614,6 @@
       "Help on function waveform_to_frames in module homework10:\n",
       "\n",
       "waveform_to_frames(waveform, frame_length, step)\n",
-      "    Chop a waveform into overlapping frames.\n",
-      "    \n",
-      "    @params:\n",
-      "    waveform (np.ndarray(N)) - the waveform\n",
-      "    frame_length (scalar) - length of the frame, in samples\n",
-      "    step (scalar) - step size, in samples\n",
-      "    \n",
-      "    @returns:\n",
-      "    frames (np.ndarray((frame_length, num_frames))) - waveform chopped into frames\n",
-      "    \n",
-      "    num_frames should be at least int((len(speech)-frame_length)/step); it may be longer.\n",
-      "    For every n and t such that 0 <= t*step+n <= N-1, it should be the case that \n",
-      "       frames[n,t] = waveform[t*step+n]\n",
       "\n"
      ]
     }
@@ -639,20 +626,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "779f2d5c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "You need to change this part",
+     "ename": "NameError",
+     "evalue": "name 'speech' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework10)\n\u001b[0;32m----> 2\u001b[0m frames \u001b[38;5;241m=\u001b[39m \u001b[43mhomework10\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaveform_to_frames\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspeech\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_length\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstep\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(frames,origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m,aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py:19\u001b[0m, in \u001b[0;36mwaveform_to_frames\u001b[0;34m(waveform, frame_length, step)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwaveform_to_frames\u001b[39m(waveform, frame_length, step):\n\u001b[1;32m      4\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m    Chop a waveform into overlapping frames.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m       frames[n,t] = waveform[t*step+n]\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou need to change this part\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: You need to change this part"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework10)\n\u001b[1;32m----> 2\u001b[0m frames \u001b[38;5;241m=\u001b[39m homework10\u001b[38;5;241m.\u001b[39mwaveform_to_frames(\u001b[43mspeech\u001b[49m, frame_length, step)\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(frames,origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m,aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'speech' is not defined"
      ]
     }
    ],
@@ -672,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "06fa71a1",
    "metadata": {},
    "outputs": [
@@ -683,13 +669,6 @@
       "Help on function frames_to_stft in module homework10:\n",
       "\n",
       "frames_to_stft(frames)\n",
-      "    Take the FFT of every column of the frames matrix.\n",
-      "    \n",
-      "    @params:\n",
-      "    frames (np.ndarray((frame_length, num_frames))) - the speech samples (real-valued)\n",
-      "    \n",
-      "    @returns:\n",
-      "    stft (np.ndarray((frame_length,num_frames))) - the STFT (complex-valued)\n",
       "\n"
      ]
     }
@@ -701,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "63efbf9f",
    "metadata": {},
    "outputs": [
@@ -710,10 +689,10 @@
      "evalue": "name 'frames' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework10)\n\u001b[0;32m----> 2\u001b[0m stft \u001b[38;5;241m=\u001b[39m homework10\u001b[38;5;241m.\u001b[39mframes_to_stft(\u001b[43mframes\u001b[49m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(np\u001b[38;5;241m.\u001b[39mabs(stft[:frame_length\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m]),origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m,aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'frames' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework10)\n\u001b[1;32m----> 2\u001b[0m stft \u001b[38;5;241m=\u001b[39m homework10\u001b[38;5;241m.\u001b[39mframes_to_stft(\u001b[43mframes\u001b[49m)\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(np\u001b[38;5;241m.\u001b[39mabs(stft[:frame_length\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m]),origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m,aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'frames' is not defined"
      ]
     }
    ],
@@ -733,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "77121659",
    "metadata": {},
    "outputs": [
@@ -744,19 +723,6 @@
       "Help on function stft_to_spectrogram in module homework10:\n",
       "\n",
       "stft_to_spectrogram(stft)\n",
-      "    Calculate the level, in decibels, of each complex-valued sample of the STFT,\n",
-      "    normalized so the highest value is 0dB, \n",
-      "    and clipped so that the lowest value is -60dB.\n",
-      "    \n",
-      "    @params:\n",
-      "    stft (np.ndarray((frame_length,num_frames))) - STFT (complex-valued)\n",
-      "    \n",
-      "    @returns:\n",
-      "    spectrogram (np.ndarray((frame_length,num_frames)) - spectrogram (real-valued)\n",
-      "    \n",
-      "    The spectrogram should be expressed in decibels (20*log10(abs(stft)).\n",
-      "    np.amax(spectrogram) should be 0dB.\n",
-      "    np.amin(spectrogram) should be no smaller than -60dB.\n",
       "\n"
      ]
     }
@@ -768,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "86b2b544",
    "metadata": {},
    "outputs": [
@@ -777,10 +743,10 @@
      "evalue": "name 'stft' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework10)\n\u001b[0;32m----> 2\u001b[0m spectrogram \u001b[38;5;241m=\u001b[39m homework10\u001b[38;5;241m.\u001b[39mstft_to_spectrogram(\u001b[43mstft\u001b[49m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(spectrogram[:frame_length\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m],origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m,aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'stft' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework10)\n\u001b[1;32m----> 2\u001b[0m spectrogram \u001b[38;5;241m=\u001b[39m homework10\u001b[38;5;241m.\u001b[39mstft_to_spectrogram(\u001b[43mstft\u001b[49m)\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(spectrogram[:frame_length\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m],origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m,aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'stft' is not defined"
      ]
     }
    ],
@@ -806,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "98a99327",
    "metadata": {},
    "outputs": [
@@ -814,95 +780,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_frames_to_stft (grade.Test)\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 28, in test_frames_to_stft\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
+      "Ran 3 tests in 0.009s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_stft_to_spectrogram (grade.Test)\n",
+      "OK\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 46, in test_stft_to_spectrogram\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
+      "Ran 3 tests in 0.007s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_waveform_to_frames (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 13, in test_waveform_to_frames\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
-      "\n",
-      "FAILED (errors=3)\n",
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_frames_to_stft (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 28, in test_frames_to_stft\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_stft_to_spectrogram (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 46, in test_stft_to_spectrogram\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_waveform_to_frames (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 13, in test_waveform_to_frames\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.004s\n",
-      "\n",
-      "FAILED (errors=3)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n"
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n",
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\wisel\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec10\\\\grade.py'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
